Add Google integration and error page
Added Google Account integration to Supabase, and improved
the routing using React Router, such that when logged in,
it does not automatically redirect to the home (dashboard)
page.

Minor styling changes were also included, such as
changing the primary font to Open Sans (Google font).
More styling changes to come.

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,17 @@
     transform: rotate(360deg);
   }
 }
+
+.error-page {
+  margin: 1.3em;
+  border-radius: 1em;
+  padding: 2em;
+  background-color: rgb(255, 188, 188);
+  color: rgb(134, 32, 32);
+
+}
+
+/* create gaps between paragraphs */
+p {
+  margin-bottom: .5em;
+}
