--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+/* imported fonts: Open Sans (text), Inconsolata (logo and code) */ 
+@import url('https://fonts.googleapis.com/css2?family=Inconsolata&family=Open+Sans&display=swap');
 
 body {
   margin: 0;
@@ -10,6 +11,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: Inconsolata, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
