Refactor app bar and nav functionality
Made app bar and nav drawer (navsides) more
object-oriented to reduce boilerplate code.

Added nav drawer and app bar to all files
that require them.

--- a/src/App.css
+++ b/src/App.css
@@ -40,8 +40,13 @@
 
 .todo-study-logo {
   font-family: Inconsolata, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-  monospace;
+  monospace !important;
   color: #00BF63;
+}
+
+.todo-study-logo-white {
+  font-family: Inconsolata, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  monospace !important;
 }
 
 .error-page {
